# la-biblioteca-eterna

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: design-doc.md  lessons_learned.md  notes.md
docs/finetuning/: 00-INDEX.md  01-introduction.md  02-techniques.md  03-data-preparation.md  04-training-process.md  05-project-specific.md  06-advanced-topics.md  07-tools-and-resources.md
