[project]
name = "la-biblioteca-eterna"
version = "0.1.0"
description = "A meditative roguelike experience set within a vast, ever-shifting metaphysical library"
authors = [
    {name = "cathodeDreams", email = "cathodedream240@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.11,<3.12"
dependencies = [
    "tcod>=16.0.0",  # Core roguelike library
    "numpy>=1.24.0",  # Required for tcod and tensor operations
    "torch>=2.1.0",  # Deep learning framework for LLMs
    "transformers>=4.36.0",  # Hugging Face transformers for LLM support
    "pytest>=7.4.0",  # Testing framework
    "pytest-cov>=4.1.0",  # Test coverage
    "mypy>=1.7.0",  # Static type checking
    "black>=23.11.0",  # Code formatting
    "isort>=5.12.0",  # Import sorting
    "ruff>=0.1.6",  # Fast Python linter
    "fmod-python>=0.1.0",  # Audio engine
    "networkx>=3.2.0",  # Graph database for knowledge system
    "numba>=0.58.0",  # Performance optimization
]

[tool.poetry]
name = "la-biblioteca-eterna"
version = "0.1.0"
description = "A meditative roguelike experience set within a vast, ever-shifting metaphysical library"
authors = ["cathodeDreams <cathodedream240@gmail.com>"]
packages = [{include = "la_biblioteca_eterna", from = "src"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
